Set compile with language version